<resources>
    <string name="app_name">Barde</string>
    <string name="str_to_register">Register</string>
    <string name="str_register">Register</string>
    <string name="str_login">Log in</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_confirm_password">Confirm your password</string>
    <string name="str_firstname">FirstName</string>
    <string name="str_lastname">LastName</string>
    <string name="str_username">UserName</string>
    <string name="str_setting">Setting</string>
    <string name="str_settings">Settings</string>
    <string name="str_dateofbirthday">Birthday</string>

    <string name="str_email_required">Email*</string>
    <string name="str_password_required">Password*</string>
    <string name="str_confirm_password_required">Comfirm your password*</string>
    <string name="str_firstname_required">FirstName*</string>
    <string name="str_lastname_required">LastName*</string>
    <string name="str_username_required">UserName*</string>
    <string name="str_dateofbirthday_required">Birthday*</string>

    <string name="str_update">Update</string>
    <string name="str_successuful_update">update successful</string>
    <string name="str_missing_firstname">missing firstname</string>
    <string name="str_missing_lastname">missing lastname</string>
    <string name="str_missing_username">missing username</string>
    <string name="str_missing_email">missing email</string>
    <string name="str_missing_passowrd">missing passowrd</string>
    <string name="str_logout">log out</string>
    <string name="str_welcome_text">Welcome on Barde</string>
    <string name="str_first_page_main_text">Create an account to enjoy all Barde\'s features</string>
    <string name="str_profile">profil</string>
    <string name="str_my_lists">my lists</string>
    <string name="str_update_profile">Edit profil</string>
    <string name="str_my_account">My acccount</string>
    <string name="str_back">Back</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_ok">Ok</string>
    <string name="str_playlist">Playlist</string>
    <string name="str_generation">Generation</string>
    <string name="str_subscription">Subscribe</string>
    <string name="str_already_registred">Always registred ?</string>
    <string name="str_notification">Notification</string>
    <string name="str_theme">Theme</string>
    <string name="str_Report">Send a comment</string>
    <string name="str_enter_your_name">Enter your name</string>
    <string name="str_your_message">Your message</string>
    <string name="str_submit">Submit</string>
    <string name="str_enter_your_issue">Enter your comment</string>
    <string name="str_firstname_cannont_be_empy">Firstname cannot be empty</string>
    <string name="str_lastname_cannont_be_empy">Lastname cannot be empty</string>
    <string name="str_birthday_cannont_be_empy">Birthday cannot be empty</string>
    <string name="str_username_cannont_be_empy">Username cannot be empty</string>
    <string name="str_email_cannont_be_empy">Email cannot be empty</string>
    <string name="str_email_format_wrong">The email format is wrong.</string>
    <string name="str_password_cannont_be_empy">Password cannot be empty</string>
    <string name="str_please_confirm_your_password">Please confirm your password</string>
    <string name="str_password_dont_match">Password don\'t match</string>
    <string name="str_trumpet">Trumpet</string>
    <string name="str_piano">Piano</string>
    <string name="str_saxophone">Saxophone</string>
    <string name="str_enable_drum">Enabled drums</string>
    <string name="msg_active_folder_permission">before playing music please accept permission from barde setings</string>
    <string name="str_disconected">disconnected</string>
    <string name="str_choose_your_style">Choose your style</string>
    <string name="str_jazz">Reggae</string>
    <string name="str_blues">blues</string>
    <string name="str_choose_your_instrument">Choose your instrument</string>
    <string name="str_chords">Chords</string>
    <string name="str_arpege">Arpege</string>
    <string name="str_choose_your_tempo">Choose your tempo</string>
    <string name="str_70_bpm">70 BPM</string>
    <string name="str_style">Style</string>
    <string name="str_instruments">Instrument</string>
    <string name="str_BPM">BPM</string>
    <string name="str_show">SHOW</string>
    <string name="str_hide">HIDE</string>
    <string name="str_optional_information">Optional information</string>
    
    //tutorial
    <string name="activity_tutorail_page_one_title">Bienvenue sur Barde</string>
    <string name="activity_tutorail_page_one_subtitle">
        Barde est une solution de génération de musique d\'ambiance. Mais tu le sais probabblement ddéjà .. ;)

        Mais sais-tu comment cela fonctionne</string>
    <string name="activity_tutorail_page_one_text">Appuie sur "Suivant" pour le découvrir !</string>

    <string name="activity_tutorail_page_two_title">Le style</string>
    <string name="activity_tutorail_page_two_subtitle"></string>
    <string name="activity_tutorail_page_two_text">
        Tu as le choix entre plusieurs style qui te permettent de générer de la musique adaptée à tes goûts
    </string>

    <string name="activity_tutorail_page_three_title">Les arpéges et les accords</string>
    <string name="activity_tutorail_page_three_subtitle"></string>
    <string name="activity_tutorail_page_three_text">
        Choisis tes arpèges, instruments qui constituent la mélodie principale de ta musique

        Maintenant, place aux accord ! Les accords créent l'ambiance principale de ta musique.

        Fais ton choix !
    </string>

    <string name="activity_tutorail_page_four_title">La batterie</string>
    <string name="activity_tutorail_page_four_subtitle"></string>
    <string name="activity_tutorail_page_four_text">
        Tu souhaites avoir un peu de batterie dans ton morceau ? Activie la !
    </string>

    <string name="activity_tutorail_page_five_title">Le rythme</string>
    <string name="activity_tutorail_page_five_subtitle"></string>
    <string name="activity_tutorail_page_five_text">
        Le BPM détermine le tempo de ta murique. Plus il est élévé, plus ta musique sera rapide.
        Détermines celui qui te conviens !
    </string>

    <string name="activity_tutorail_page_six_title">Ecoute ta musique</string>
    <string name="activity_tutorail_page_six_subtitle"></string>
    <string name="activity_tutorail_page_six_text">
        C\'est parti : Démarre ta musique en cliquant sur le bouton de lecture
    </string>

    <string name="activity_tutorail_page_seven_title">C\'est ton tour</string>
    <string name="activity_tutorail_page_seven_subtitle">
        Tu es maintenant prêt à générer Ta musique.
    </string>
    <string name="activity_tutorail_page_seven_text">
        Tu peux visualiser à nouveau ce tutoriel depuis la page de "Génération" en cliquant sur le bouton d\'aide.
    </string>

    //other

    <string name="skip">Skip</string>
</resources>
