<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.barde.barde.ui.activities.RegisterActivity"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_firstname"
            android:background="@drawable/input_rounded_corners_white"
            android:id="@+id/register_firstname"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_lastname"
            android:background="@drawable/input_rounded_corners_white"
            android:id="@+id/register_lastname"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_dateofbirthday"
            android:gravity="center"/>
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:id="@+id/register_dateofbirthday">
        </DatePicker>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_username"
            android:id="@+id/register_username"
            android:background="@drawable/input_rounded_corners_white"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_email"
            android:id="@+id/register_email"
            android:background="@drawable/input_rounded_corners_white"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_password"
            android:id="@+id/register_password"
            android:background="@drawable/input_rounded_corners_white"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_to_register"
            android:background="@drawable/button_rounded_corners_white"
            android:id="@+id/toRegister"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>
