<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/profile_user_header_button_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:text="@string/str_Report"
            android:layout_weight="2"
            android:gravity="center"/>
        <LinearLayout
            android:id="@+id/profile_user_header_button_end"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="end">
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/str_enter_your_issue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:id="@+id/text_report"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_your_message"
            android:background="@android:color/transparent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <Button
                android:id="@+id/submit_report"
                android:textColor="#ffffff"
                android:text="@string/str_submit"
                android:background="@drawable/button_rounded_corners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>