<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.barde.barde.ui.activities.LoginActivity"
    android:gravity="center"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/barde"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/str_email"
            android:id="@+id/email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/str_password"
            android:id="@+id/password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/str_login"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_rounded_corners"
                android:id="@+id/connexion"
                android:padding="10dp"
                android:layout_weight="3"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/str_register"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_rounded_corners"
                android:id="@+id/register"
                android:padding="10dp"
                android:layout_weight="3"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
